--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="beginner">Beginner</string>
     <string name="bauler">Baller</string>
     <string name="button">Button</string>
+    <string name="appSearches">Looking for a co-ed beginner league near you...</string>
 </resources>
